fix modal z-index

--- a/src/scss/_modal.scss
+++ b/src/scss/_modal.scss
@@ -9,6 +9,7 @@
   position: fixed;
   right: 0;
   top: 0;
+  z-index: 99;
 }
 
 .modal_contents {
